[gd_scene load_steps=103 format=3 uid="uid://xmiw62vj2h"]

[ext_resource type="Script" uid="uid://xl2wsdfwofhd" path="res://Scripts/main.gd" id="1_7sj7i"]
[ext_resource type="Script" uid="uid://y2jlau8psgln" path="res://Scripts/player.gd" id="1_hpjjw"]
[ext_resource type="Texture2D" uid="uid://ck8on7cof48a0" path="res://Sprites/Player/Dying/Wraith_01_Dying_000.png" id="1_m4llh"]
[ext_resource type="Texture2D" uid="uid://csqc3v3koa5d0" path="res://Sprites/Background/Trees.png" id="2_7sj7i"]
[ext_resource type="Texture2D" uid="uid://bu1vdeagktl2x" path="res://Sprites/Player/Dying/Wraith_01_Dying_001.png" id="2_lac6x"]
[ext_resource type="Script" uid="uid://cvdqv0kow1jvq" path="res://Scripts/background_container.gd" id="2_semxg"]
[ext_resource type="Texture2D" uid="uid://dj7lafx23vk81" path="res://Sprites/Player/Dying/Wraith_01_Dying_002.png" id="3_hpjjw"]
[ext_resource type="Texture2D" uid="uid://crb2bvqmcxnp7" path="res://Sprites/Background/Above.png" id="4_7sj7i"]
[ext_resource type="Texture2D" uid="uid://go7spjluhn72" path="res://Sprites/Background/Road.png" id="4_ep8v8"]
[ext_resource type="Texture2D" uid="uid://upaps3b7kxe0" path="res://Sprites/Player/Dying/Wraith_01_Dying_003.png" id="4_off7b"]
[ext_resource type="Texture2D" uid="uid://phqbisf1tm7m" path="res://Sprites/Player/Dying/Wraith_01_Dying_004.png" id="5_lfh1j"]
[ext_resource type="Texture2D" uid="uid://dsssyiy3rw7mt" path="res://Sprites/Player/Dying/Wraith_01_Dying_005.png" id="6_7sj7i"]
[ext_resource type="Texture2D" uid="uid://43a6st1m5n2d" path="res://Sprites/Player/Dying/Wraith_01_Dying_006.png" id="7_semxg"]
[ext_resource type="Texture2D" uid="uid://cogg306rt3jii" path="res://Sprites/Player/Dying/Wraith_01_Dying_007.png" id="8_ep8v8"]
[ext_resource type="Texture2D" uid="uid://cjitwwvr4se3o" path="res://Sprites/Player/Dying/Wraith_01_Dying_008.png" id="9_3133c"]
[ext_resource type="Texture2D" uid="uid://c6gyp6p8jt2tf" path="res://Sprites/Player/Dying/Wraith_01_Dying_009.png" id="10_js5gh"]
[ext_resource type="Texture2D" uid="uid://ddejmhsywqjo6" path="res://Sprites/Player/Dying/Wraith_01_Dying_010.png" id="11_vvjo1"]
[ext_resource type="Texture2D" uid="uid://br2qmoxs2dg0f" path="res://Sprites/Player/Dying/Wraith_01_Dying_011.png" id="12_yisvs"]
[ext_resource type="Texture2D" uid="uid://dkotcqis15ej6" path="res://Sprites/Player/Dying/Wraith_01_Dying_012.png" id="13_rgw24"]
[ext_resource type="Texture2D" uid="uid://cfli4ip5713ms" path="res://Sprites/Player/Dying/Wraith_01_Dying_013.png" id="14_5gwyn"]
[ext_resource type="Texture2D" uid="uid://bmx6p2ya7uoos" path="res://Sprites/Player/Dying/Wraith_01_Dying_014.png" id="15_r6gtk"]
[ext_resource type="Texture2D" uid="uid://dk7mx3rdb1hkc" path="res://Sprites/Player/Idle/Wraith_01_Idle_000.png" id="16_81ldr"]
[ext_resource type="Texture2D" uid="uid://b1h6ckassox3l" path="res://Sprites/Player/Idle/Wraith_01_Idle_001.png" id="17_eywpa"]
[ext_resource type="Texture2D" uid="uid://cb5he6ppvfjnw" path="res://Sprites/Player/Idle/Wraith_01_Idle_002.png" id="18_j7e3e"]
[ext_resource type="Texture2D" uid="uid://bb2mwufhismx5" path="res://Sprites/Player/Idle/Wraith_01_Idle_003.png" id="19_y2ulj"]
[ext_resource type="Texture2D" uid="uid://btluct7elgm6l" path="res://Sprites/Player/Idle/Wraith_01_Idle_004.png" id="20_t3x2a"]
[ext_resource type="Texture2D" uid="uid://qiym682gr3b1" path="res://Sprites/Player/Idle/Wraith_01_Idle_005.png" id="21_1bbis"]
[ext_resource type="Texture2D" uid="uid://b48ofmoysmydq" path="res://Sprites/Player/Idle/Wraith_01_Idle_006.png" id="22_yn2g2"]
[ext_resource type="Texture2D" uid="uid://c8toj262x6s1x" path="res://Sprites/Player/Idle/Wraith_01_Idle_007.png" id="23_yic5e"]
[ext_resource type="Texture2D" uid="uid://defckvyfp1q66" path="res://Sprites/Player/Idle/Wraith_01_Idle_008.png" id="24_ex7s8"]
[ext_resource type="Texture2D" uid="uid://dsuxblbdst7pk" path="res://Sprites/Player/Idle/Wraith_01_Idle_009.png" id="25_4clwk"]
[ext_resource type="Texture2D" uid="uid://del4xt2imwomi" path="res://Sprites/Player/Idle/Wraith_01_Idle_010.png" id="26_h2tpa"]
[ext_resource type="Texture2D" uid="uid://b41x74ig6xxak" path="res://Sprites/Player/Idle/Wraith_01_Idle_011.png" id="27_nkjwg"]
[ext_resource type="Texture2D" uid="uid://qmhkv0s77fu6" path="res://Sprites/Player/Walking/Wraith_01_Moving Forward_000.png" id="28_8n4h5"]
[ext_resource type="Texture2D" uid="uid://g5cd2s2m1f8" path="res://Sprites/Player/Walking/Wraith_01_Moving Forward_001.png" id="29_as1io"]
[ext_resource type="Texture2D" uid="uid://pswplyn58vo6" path="res://Sprites/Player/Walking/Wraith_01_Moving Forward_002.png" id="30_xd5mi"]
[ext_resource type="Texture2D" uid="uid://mx38qp6hx0nx" path="res://Sprites/Player/Walking/Wraith_01_Moving Forward_003.png" id="31_tt1x2"]
[ext_resource type="Texture2D" uid="uid://bvpp1dvdcncke" path="res://Sprites/Player/Walking/Wraith_01_Moving Forward_004.png" id="32_2wrh7"]
[ext_resource type="Texture2D" uid="uid://cjs0fw824kxfg" path="res://Sprites/Player/Walking/Wraith_01_Moving Forward_005.png" id="33_atu2d"]
[ext_resource type="Texture2D" uid="uid://cjvyyfnmc04bs" path="res://Sprites/Player/Walking/Wraith_01_Moving Forward_006.png" id="34_x5wht"]
[ext_resource type="Texture2D" uid="uid://bukr84sm55n4i" path="res://Sprites/Player/Walking/Wraith_01_Moving Forward_007.png" id="35_tbeql"]
[ext_resource type="Texture2D" uid="uid://dqcebvfiav26p" path="res://Sprites/Player/Walking/Wraith_01_Moving Forward_008.png" id="36_c5nnb"]
[ext_resource type="Texture2D" uid="uid://chpnij84bve6w" path="res://Sprites/Player/Walking/Wraith_01_Moving Forward_009.png" id="37_fsd2l"]
[ext_resource type="Texture2D" uid="uid://dlq3p54wrjka3" path="res://Sprites/Player/Walking/Wraith_01_Moving Forward_010.png" id="38_8kgcr"]
[ext_resource type="Texture2D" uid="uid://bpgcvov72a3bk" path="res://Sprites/Player/Walking/Wraith_01_Moving Forward_011.png" id="39_52a0j"]
[ext_resource type="FontFile" uid="uid://bl7qp1tuh00e2" path="res://fonts/Creepster-Regular.ttf" id="46_lfh1j"]
[ext_resource type="Script" uid="uid://dglaoigq5nbv5" path="res://Scripts/game_over_ui.gd" id="46_m4llh"]
[ext_resource type="Script" uid="uid://xywd82j0ao7m" path="res://Scripts/game_start_ui.gd" id="47_lac6x"]
[ext_resource type="FontFile" uid="uid://d2an31he7wkeh" path="res://fonts/UnZialish.ttf" id="48_7sj7i"]
[ext_resource type="PackedScene" uid="uid://bo6brkjgctgbx" path="res://Scenes/DeadZone.tscn" id="48_hpjjw"]
[ext_resource type="Script" uid="uid://6y30hdfbdljo" path="res://Scripts/ui.gd" id="49_off7b"]
[ext_resource type="AudioStream" uid="uid://cgkicjlr8q853" path="res://Sounds/death.mp3" id="52_ep8v8"]
[ext_resource type="AudioStream" uid="uid://b2okw706f13gj" path="res://Sounds/tap.mp3" id="53_ep8v8"]

[sub_resource type="AtlasTexture" id="AtlasTexture_pg0gw"]
atlas = ExtResource("1_m4llh")
region = Rect2(0, 0, 520, 420)

[sub_resource type="AtlasTexture" id="AtlasTexture_qavoy"]
atlas = ExtResource("2_lac6x")
region = Rect2(0, 0, 520, 420)

[sub_resource type="AtlasTexture" id="AtlasTexture_w4w4b"]
atlas = ExtResource("3_hpjjw")
region = Rect2(0, 0, 520, 420)

[sub_resource type="AtlasTexture" id="AtlasTexture_h5cax"]
atlas = ExtResource("4_off7b")
region = Rect2(0, 0, 520, 420)

[sub_resource type="AtlasTexture" id="AtlasTexture_dj0x0"]
atlas = ExtResource("5_lfh1j")
region = Rect2(0, 0, 520, 420)

[sub_resource type="AtlasTexture" id="AtlasTexture_f1uaf"]
atlas = ExtResource("6_7sj7i")
region = Rect2(0, 0, 520, 420)

[sub_resource type="AtlasTexture" id="AtlasTexture_6hq81"]
atlas = ExtResource("7_semxg")
region = Rect2(0, 0, 520, 420)

[sub_resource type="AtlasTexture" id="AtlasTexture_5cld6"]
atlas = ExtResource("8_ep8v8")
region = Rect2(0, 0, 520, 420)

[sub_resource type="AtlasTexture" id="AtlasTexture_o736f"]
atlas = ExtResource("9_3133c")
region = Rect2(0, 0, 520, 420)

[sub_resource type="AtlasTexture" id="AtlasTexture_ketbw"]
atlas = ExtResource("10_js5gh")
region = Rect2(0, 0, 520, 420)

[sub_resource type="AtlasTexture" id="AtlasTexture_4grkl"]
atlas = ExtResource("11_vvjo1")
region = Rect2(0, 0, 520, 420)

[sub_resource type="AtlasTexture" id="AtlasTexture_6yrdb"]
atlas = ExtResource("12_yisvs")
region = Rect2(0, 0, 520, 420)

[sub_resource type="AtlasTexture" id="AtlasTexture_ue0p1"]
atlas = ExtResource("13_rgw24")
region = Rect2(0, 0, 520, 420)

[sub_resource type="AtlasTexture" id="AtlasTexture_isbcs"]
atlas = ExtResource("14_5gwyn")
region = Rect2(0, 0, 520, 420)

[sub_resource type="AtlasTexture" id="AtlasTexture_142e3"]
atlas = ExtResource("15_r6gtk")
region = Rect2(0, 0, 520, 420)

[sub_resource type="AtlasTexture" id="AtlasTexture_ts2c8"]
atlas = ExtResource("16_81ldr")
region = Rect2(0, 0, 520, 420)

[sub_resource type="AtlasTexture" id="AtlasTexture_hcgbs"]
atlas = ExtResource("17_eywpa")
region = Rect2(0, 0, 520, 420)

[sub_resource type="AtlasTexture" id="AtlasTexture_mpfyg"]
atlas = ExtResource("18_j7e3e")
region = Rect2(0, 0, 520, 420)

[sub_resource type="AtlasTexture" id="AtlasTexture_un823"]
atlas = ExtResource("19_y2ulj")
region = Rect2(0, 0, 520, 420)

[sub_resource type="AtlasTexture" id="AtlasTexture_aclic"]
atlas = ExtResource("20_t3x2a")
region = Rect2(0, 0, 520, 420)

[sub_resource type="AtlasTexture" id="AtlasTexture_0y64g"]
atlas = ExtResource("21_1bbis")
region = Rect2(0, 0, 520, 420)

[sub_resource type="AtlasTexture" id="AtlasTexture_ramv3"]
atlas = ExtResource("22_yn2g2")
region = Rect2(0, 0, 520, 420)

[sub_resource type="AtlasTexture" id="AtlasTexture_hseb1"]
atlas = ExtResource("23_yic5e")
region = Rect2(0, 0, 520, 420)

[sub_resource type="AtlasTexture" id="AtlasTexture_vinow"]
atlas = ExtResource("24_ex7s8")
region = Rect2(0, 0, 520, 420)

[sub_resource type="AtlasTexture" id="AtlasTexture_awsf5"]
atlas = ExtResource("25_4clwk")
region = Rect2(0, 0, 520, 420)

[sub_resource type="AtlasTexture" id="AtlasTexture_v84ne"]
atlas = ExtResource("26_h2tpa")
region = Rect2(0, 0, 520, 420)

[sub_resource type="AtlasTexture" id="AtlasTexture_4pcjl"]
atlas = ExtResource("27_nkjwg")
region = Rect2(0, 0, 520, 420)

[sub_resource type="AtlasTexture" id="AtlasTexture_3ath1"]
atlas = ExtResource("28_8n4h5")
region = Rect2(0, 0, 520, 420)

[sub_resource type="AtlasTexture" id="AtlasTexture_pgf6i"]
atlas = ExtResource("29_as1io")
region = Rect2(0, 0, 520, 420)

[sub_resource type="AtlasTexture" id="AtlasTexture_bvt37"]
atlas = ExtResource("30_xd5mi")
region = Rect2(0, 0, 520, 420)

[sub_resource type="AtlasTexture" id="AtlasTexture_kt3hj"]
atlas = ExtResource("31_tt1x2")
region = Rect2(0, 0, 520, 420)

[sub_resource type="AtlasTexture" id="AtlasTexture_2jrev"]
atlas = ExtResource("32_2wrh7")
region = Rect2(0, 0, 520, 420)

[sub_resource type="AtlasTexture" id="AtlasTexture_5j7nw"]
atlas = ExtResource("33_atu2d")
region = Rect2(0, 0, 520, 420)

[sub_resource type="AtlasTexture" id="AtlasTexture_mrkcr"]
atlas = ExtResource("34_x5wht")
region = Rect2(0, 0, 520, 420)

[sub_resource type="AtlasTexture" id="AtlasTexture_78kn1"]
atlas = ExtResource("35_tbeql")
region = Rect2(0, 0, 520, 420)

[sub_resource type="AtlasTexture" id="AtlasTexture_nwtn4"]
atlas = ExtResource("36_c5nnb")
region = Rect2(0, 0, 520, 420)

[sub_resource type="AtlasTexture" id="AtlasTexture_hl8o5"]
atlas = ExtResource("37_fsd2l")
region = Rect2(0, 0, 520, 420)

[sub_resource type="AtlasTexture" id="AtlasTexture_v8gx6"]
atlas = ExtResource("38_8kgcr")
region = Rect2(0, 0, 520, 420)

[sub_resource type="AtlasTexture" id="AtlasTexture_vlr8u"]
atlas = ExtResource("39_52a0j")
region = Rect2(0, 0, 520, 420)

[sub_resource type="SpriteFrames" id="SpriteFrames_s0riu"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_pg0gw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qavoy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_w4w4b")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_h5cax")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dj0x0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_f1uaf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6hq81")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5cld6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_o736f")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ketbw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4grkl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6yrdb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ue0p1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_isbcs")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_142e3")
}],
"loop": false,
"name": &"dead",
"speed": 20.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ts2c8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hcgbs")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mpfyg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_un823")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_aclic")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0y64g")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ramv3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hseb1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vinow")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_awsf5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_v84ne")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4pcjl")
}],
"loop": true,
"name": &"idle",
"speed": 20.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_3ath1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pgf6i")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bvt37")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kt3hj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2jrev")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5j7nw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mrkcr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_78kn1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nwtn4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hl8o5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_v8gx6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vlr8u")
}],
"loop": true,
"name": &"walking",
"speed": 20.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_hpjjw"]
radius = 76.6105
height = 259.978

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_off7b"]
radius = 28.7845
height = 83.4255

[sub_resource type="LabelSettings" id="LabelSettings_ep8v8"]
font = ExtResource("46_lfh1j")
font_size = 42
font_color = Color(0.698039, 0.898039, 1, 1)
outline_size = 1
outline_color = Color(0, 0, 0, 1)
shadow_size = 10
shadow_color = Color(0.384314, 0, 0, 1)

[sub_resource type="Animation" id="Animation_ep8v8"]
resource_name = "blink"
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:uppercase")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.36),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, true]
}

[sub_resource type="Animation" id="Animation_3133c"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:uppercase")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_js5gh"]
_data = {
&"RESET": SubResource("Animation_3133c"),
&"blink": SubResource("Animation_ep8v8")
}

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_5psol"]
bg_color = Color(0, 0, 0, 0.596078)
corner_radius_top_left = 12
corner_radius_top_right = 12
corner_radius_bottom_right = 12
corner_radius_bottom_left = 12
expand_margin_left = 50.0
expand_margin_top = 50.0
expand_margin_right = 50.0
expand_margin_bottom = 50.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_m4llh"]
bg_color = Color(0.0260971, 0.545438, 0.65474, 1)
corner_radius_top_left = 12
corner_radius_top_right = 12
corner_radius_bottom_right = 12
corner_radius_bottom_left = 12
expand_margin_left = 30.0
expand_margin_top = 5.0
expand_margin_right = 30.0
expand_margin_bottom = 5.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_hpjjw"]
bg_color = Color(8.42288e-07, 0.531975, 0.186659, 1)
corner_radius_top_left = 12
corner_radius_top_right = 12
corner_radius_bottom_right = 12
corner_radius_bottom_left = 12
expand_margin_left = 30.0
expand_margin_top = 5.0
expand_margin_right = 30.0
expand_margin_bottom = 5.0

[node name="Main" type="Node2D"]
script = ExtResource("1_7sj7i")

[node name="BackgroundContainer" type="Node2D" parent="."]
position = Vector2(962, 540)
scale = Vector2(1.25, 1.06)
script = ExtResource("2_semxg")

[node name="Background1" type="Sprite2D" parent="BackgroundContainer"]
position = Vector2(-1.60016, 0)
texture = ExtResource("2_7sj7i")

[node name="Background2" type="Sprite2D" parent="BackgroundContainer"]
position = Vector2(1533.6, 0)
texture = ExtResource("2_7sj7i")

[node name="Background3" type="Sprite2D" parent="BackgroundContainer"]
position = Vector2(3068.8, 0)
texture = ExtResource("2_7sj7i")

[node name="RoadUp1" type="Sprite2D" parent="BackgroundContainer"]
z_index = 1
position = Vector2(-1.6001, -458.962)
scale = Vector2(1, 0.268097)
texture = ExtResource("4_7sj7i")
flip_v = true

[node name="RoadUp2" type="Sprite2D" parent="BackgroundContainer"]
z_index = 1
position = Vector2(1533.6, -458.962)
scale = Vector2(1, 0.268097)
texture = ExtResource("4_7sj7i")
flip_v = true

[node name="RoadUp3" type="Sprite2D" parent="BackgroundContainer"]
z_index = 1
position = Vector2(3068.8, -458.962)
scale = Vector2(1, 0.268097)
texture = ExtResource("4_7sj7i")
flip_v = true

[node name="RoadDown1" type="Sprite2D" parent="BackgroundContainer"]
z_index = 1
position = Vector2(-1.6001, 502.83)
scale = Vector2(1, 0.173201)
texture = ExtResource("4_ep8v8")

[node name="RoadDown2" type="Sprite2D" parent="BackgroundContainer"]
z_index = 1
position = Vector2(1533.6, 502.829)
scale = Vector2(1, 0.173202)
texture = ExtResource("4_ep8v8")

[node name="RoadDown3" type="Sprite2D" parent="BackgroundContainer"]
z_index = 1
position = Vector2(3068.8, 502.829)
scale = Vector2(1, 0.173202)
texture = ExtResource("4_ep8v8")

[node name="Player" type="CharacterBody2D" parent="."]
process_mode = 1
position = Vector2(368, 540)
scale = Vector2(0.5, 0.5)
script = ExtResource("1_hpjjw")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="Player"]
process_mode = 1
sprite_frames = SubResource("SpriteFrames_s0riu")
animation = &"dead"
autoplay = "idle"

[node name="CollisionShape2D" type="CollisionShape2D" parent="Player"]
process_mode = 1
position = Vector2(-8.82318, -20.2206)
rotation = 0.261799
shape = SubResource("CapsuleShape2D_hpjjw")

[node name="CollisionShape2D2" type="CollisionShape2D" parent="Player"]
process_mode = 1
position = Vector2(-58, -128)
rotation = -0.523598
shape = SubResource("CapsuleShape2D_off7b")

[node name="CollisionShape2D3" type="CollisionShape2D" parent="Player"]
process_mode = 1
position = Vector2(-68, -48)
rotation = -0.523598
shape = SubResource("CapsuleShape2D_off7b")

[node name="CollisionShape2D4" type="CollisionShape2D" parent="Player"]
process_mode = 1
position = Vector2(-68, -48)
rotation = -0.523598
shape = SubResource("CapsuleShape2D_off7b")

[node name="DeathSound" type="AudioStreamPlayer2D" parent="Player"]
process_mode = 3
position = Vector2(-736, -1080)
scale = Vector2(2, 2)
stream = ExtResource("52_ep8v8")
volume_db = 20.0

[node name="UI" type="CanvasLayer" parent="."]
script = ExtResource("49_off7b")

[node name="Labels" type="Node" parent="UI"]

[node name="ScoreLabel" type="Label" parent="UI/Labels"]
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -377.0
offset_top = -18.0
offset_bottom = 119.0
grow_horizontal = 0
size_flags_horizontal = 0
size_flags_vertical = 0
text = "Score: 0"
label_settings = SubResource("LabelSettings_ep8v8")
horizontal_alignment = 1
vertical_alignment = 1

[node name="HighScoreLabel" type="Label" parent="UI/Labels"]
offset_top = -21.0
offset_right = 377.0
offset_bottom = 116.0
size_flags_horizontal = 0
size_flags_vertical = 0
text = "High Score: 0"
label_settings = SubResource("LabelSettings_ep8v8")
horizontal_alignment = 1
vertical_alignment = 1

[node name="GameStartUI" type="CanvasLayer" parent="UI"]
process_mode = 3
script = ExtResource("47_lac6x")

[node name="CenterContainer" type="CenterContainer" parent="UI/GameStartUI"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -42.5
offset_top = -20.0
offset_right = 42.5
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2

[node name="Play" type="Label" parent="UI/GameStartUI/CenterContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(2.5028e-06, 0.774091, 0.983571, 1)
theme_override_colors/font_shadow_color = Color(0.947406, 3.77826e-06, 1.73271e-06, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("48_7sj7i")
theme_override_font_sizes/font_size = 52
text = "Tap to Play"

[node name="AnimationPlayer" type="AnimationPlayer" parent="UI/GameStartUI/CenterContainer/Play"]
libraries = {
&"": SubResource("AnimationLibrary_js5gh")
}
autoplay = "blink"

[node name="GameOverUI" type="CanvasLayer" parent="UI"]
process_mode = 3
visible = false
script = ExtResource("46_m4llh")

[node name="PanelContainer" type="PanelContainer" parent="UI/GameOverUI"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -401.0
offset_top = -172.0
offset_right = 401.0
offset_bottom = 172.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_5psol")

[node name="CenterContainer" type="CenterContainer" parent="UI/GameOverUI/PanelContainer"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="UI/GameOverUI/PanelContainer/CenterContainer"]
layout_mode = 2
theme_override_constants/separation = 50

[node name="GameOver" type="Label" parent="UI/GameOverUI/PanelContainer/CenterContainer/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("48_7sj7i")
theme_override_font_sizes/font_size = 100
text = "Game Over"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Score" type="Label" parent="UI/GameOverUI/PanelContainer/CenterContainer/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("46_lfh1j")
theme_override_font_sizes/font_size = 42
text = "Score: "

[node name="HighScore" type="Label" parent="UI/GameOverUI/PanelContainer/CenterContainer/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("46_lfh1j")
theme_override_font_sizes/font_size = 42
text = "High Score: "

[node name="HBoxContainer" type="HBoxContainer" parent="UI/GameOverUI/PanelContainer/CenterContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 100

[node name="Restart" type="Button" parent="UI/GameOverUI/PanelContainer/CenterContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_fonts/font = ExtResource("46_lfh1j")
theme_override_font_sizes/font_size = 52
theme_override_styles/focus = SubResource("StyleBoxFlat_m4llh")
theme_override_styles/hover = SubResource("StyleBoxFlat_m4llh")
theme_override_styles/pressed = SubResource("StyleBoxFlat_m4llh")
theme_override_styles/normal = SubResource("StyleBoxFlat_m4llh")
text = "Home"

[node name="Continue" type="Button" parent="UI/GameOverUI/PanelContainer/CenterContainer/VBoxContainer/HBoxContainer"]
visible = false
layout_mode = 2
theme_override_fonts/font = ExtResource("46_lfh1j")
theme_override_font_sizes/font_size = 52
theme_override_styles/focus = SubResource("StyleBoxFlat_hpjjw")
theme_override_styles/hover = SubResource("StyleBoxFlat_hpjjw")
theme_override_styles/pressed = SubResource("StyleBoxFlat_hpjjw")
theme_override_styles/normal = SubResource("StyleBoxFlat_hpjjw")
text = "Continue"

[node name="ObstacleTimer" type="Timer" parent="."]
wait_time = 5.0
autostart = true

[node name="SoulTimer" type="Timer" parent="."]
autostart = true

[node name="DeadZone" parent="." instance=ExtResource("48_hpjjw")]
position = Vector2(1, 53)

[node name="DeadZone2" parent="." instance=ExtResource("48_hpjjw")]
position = Vector2(1, 1060)

[node name="Tap" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("53_ep8v8")
volume_db = 8.0

[connection signal="animation_finished" from="Player/AnimatedSprite2D" to="Player" method="_on_animated_sprite_2d_animation_finished"]
[connection signal="pressed" from="UI/GameOverUI/PanelContainer/CenterContainer/VBoxContainer/HBoxContainer/Restart" to="." method="_on_restart_pressed"]
[connection signal="pressed" from="UI/GameOverUI/PanelContainer/CenterContainer/VBoxContainer/HBoxContainer/Continue" to="." method="_on_continue_pressed"]
[connection signal="timeout" from="ObstacleTimer" to="." method="_on_obstacle_timer_timeout"]
[connection signal="timeout" from="SoulTimer" to="." method="_on_soul_timer_timeout"]
